fix alignment of admin section

--- a/discourse/common/common.scss
+++ b/discourse/common/common.scss
@@ -342,7 +342,7 @@ h3 {
 .select-kit.combo-box .select-kit-header.is-focused {
   box-shadow: none !important;
 }
-.row {
+.topic-post .row {
   display: flex;
   flex-direction: row;
 }
