--- a/less/discourse.less
+++ b/less/discourse.less
@@ -106,7 +106,7 @@ h2, h3 {
   }
 }
 
-.row {
+.topic-post .row {
   display: flex;
   flex-direction: row;
 }
